Update favicon and title in index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon"  href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Space Runner</title>
+    <meta name="description" content="Space Runner: Type at the speed of light in a galaxy far, far away..." />
   </head>
   <body>
     <div id="root"></div>
